# ramenztwo-backend

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  app_streamlit.py  hackathon-db.pem  main.py  model.py  models.py  openapi.json  pyproject.toml  requirement  requirement.txt  requirements.txt
RAG/: app_streamlit.py  main.py  models.py
infra/: app.py  cdk.context.json  requirements.txt
infra/infra/: infra_stack.py
src/: app_streamlit.py  database.py  main.py  models.py  sumilarity.py
